<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="215dp"
        android:layout_height="135dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@drawable/zablon" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/zablon_rioba"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_track"
        android:layout_width="71dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/track"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/text_country"
        android:layout_width="80dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/country"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/text_track"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_track" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="56dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_country" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/phone_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/android"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_track"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/counrty_name"
        android:layout_width="73dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/kenya"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/track_name"
        app:layout_constraintTop_toBottomOf="@+id/track_name" />

    <TextView
        android:id="@+id/email_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/riobazablon_gmail_com"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/counrty_name"
        app:layout_constraintTop_toBottomOf="@+id/counrty_name" />

    <TextView
        android:id="@+id/phone_name"
        android:layout_width="119dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/_254716565441"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_phone"
        app:layout_constraintTop_toBottomOf="@+id/email_name" />

    <TextView
        android:id="@+id/text_slack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/slack_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_phone" />

    <TextView
        android:id="@+id/slack_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/alc4_android_slack_com"
        app:layout_constraintStart_toStartOf="@+id/phone_name"
        app:layout_constraintTop_toBottomOf="@+id/phone_name" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="32dp"
        android:background="#990A0A0A"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>